# wheretopark

./: .dockerignore  .env  .env.dev  .env.example  .gitignore  .gitmodules  404.html  Caddyfile  Caddyfile.dev  Cargo.toml  README.md  build.gradle.kts  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.yml  go.mod  go.sum  gradle.properties  hydra.yml  index.css  index.html  juice.css  justfile  package.json  pnpm-lock.yaml  providers.dev.json  providers.json  robots.txt  samconfig.toml  settings.gradle.kts  sitemap.xml  template.yaml
.github/workflows/: authorization.yml  providers-tristar.yml  storekeeper.yml  tristar.yml  webapp.yml  website.yml
about/: index.html
android/: .gitignore  assetlinks.json  build.gradle.kts  manifest-checksum.txt  twa-manifest.json
android/app/: build.gradle
app/: .typesafe-i18n.json  Dockerfile  capacitor.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
app/android/: capacitor.settings.gradle
app/src/: app.html
app/static/: manifest.json  robots.txt
authorization/: Dockerfile  main.go
caman/: .gitignore  Cargo.toml
caman/src/: lib.rs  main.rs  model.rs  server.rs  stream.rs  utils.rs  vis.rs  worker.rs
caman/src/model/: classification.rs  detection.rs  mod.rs
caman/src/worker/: classification.rs  detection.rs  mod.rs
cmd/cctv/: Dockerfile  main.go
cmd/collector/: Dockerfile  main.go
cmd/exporter/: Dockerfile  main.go
cmd/forecaster/: Dockerfile  main.go
cmd/gdansk/: Dockerfile  main.go
cmd/gdynia/: Dockerfile  main.go
cmd/glasgow/: Dockerfile  main.go
cmd/influxer/: Dockerfile  main.go
cmd/krakow/: Dockerfile  main.go
cmd/lacity/: Dockerfile  main.go
cmd/poznan/: Dockerfile  main.go
cmd/tristar/: Dockerfile  main.go
cmd/warsaw/: Dockerfile  main.go
collector/: server.go
collector/cctv/: configuration_test.go  default.yaml  environment.go  saver.go  source.go  utils.go
collector/gdansk/: configuration.go  source.go  source_test.go  vendor.go
collector/gdynia/: configuration.go  source.go  source_test.go  vendor.go
collector/glasgow/: source.go  source_test.go  vendor.go
collector/krakow/: configuration.go  source.go  vendor.go  vendor_test.go
collector/lacity/: source.go  source_test.go  vendor.go
collector/poznan/: configuration.go  source.go  source_test.go
collector/warsaw/: configuration.go  configuration_pr.go  configuration_ztp.go  source.go  source_test.go  vendor.go
dozzle/: users.yml
faq/: index.html
forecaster/: forecaster.go  model.go  model_test.go  pycaster.go  server.go  source.go  timeseries.go  utils.go
forecaster/krakow/: flowbird.go  metadata.go  solari.go  solari2000.go  solari3000.go  source.go
go/: aws.go  cache.go  cache2.go  cache2_test.go  cache_test.go  client.go  client_test.go  http.go  parking_lot.go  parking_lot_test.go  provider.go  server.go  server_client.go  server_client_test.go  source.go  testing.go  utils.go
go/meters/: meters.go
go/provider/: provider.go
go/providers/: cache.go  cache_test.go  provider.go  server.go
go/tester/: tester.go
go/timeseries/: timeseries.go
ios/wheretopark/: AppEnvironment.swift  AppState.swift  BottomSheet.swift  Bridging-Header.h  ContentView.swift  DatabaseClient.swift  DetailsView.swift  Development.xcconfig  (+16 more)
ios/wheretopark.xcodeproj/: project.pbxproj
landing/: .typesafe-i18n.json  astro.config.mjs  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
meters/: flowbird.go  meters.go  solari.go  utils.go
pl/: index.html
prometheus/: prometheus.yml  web.yml
providers/cctv/: Cargo.toml  Dockerfile  build.gradle.kts  configuration.go  configuration_test.go  default.yaml  model.go  provider.go  provider_test.go  saver.go  source.go  utils.go
providers/cctv/scripts/: annotate.py
providers/cctv/src/: configuration.rs  configuration.yaml  main.rs  utils.rs
providers/cctv/src/main/kotlin/: Application.kt
pycaster/: Dockerfile  config.py  main.py  model.py  requirements.txt  timeseries.py
rust/: Cargo.toml
rust/src/: authorization.rs  lib.rs  parking_lot.rs  provider.rs  storekeeper.rs
shared/: build.gradle.kts
shared-client/: build.gradle.kts
storekeeper/: Dockerfile  build.gradle.kts
svelte/: package.json  theme.ts
visel/: package.json  pnpm-lock.yaml
web/: Dockerfile.dev  README.md  capacitor.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
webapp/: .dockerignore  .gitignore  .typesafe-i18n.json  Dockerfile  Dockerfile.dev  environment.ts  next.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
website/: config.toml  package.json  pnpm-lock.yaml  tailwind.config.js
(+421 files in other folders)
