[package]
name = "wheretopark-caman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["form"] }
bytes = "1.5.0"
dashmap = "5.5.3"
directories = "5.0.1"
ffmpeg-next = "6.0.0"
image = "0.24.7"
imageproc = "0.23.0"
itertools = "0.11.0"
m3u8-rs = "5.0.4"
ndarray = "0.15.6"
nshare = { version = "0.9.0", features = ["ndarray", "image"] }
num = "0.4.1"
ort = "1.15.4"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = { version = "2.4.1", features = ["serde"] }
