[package]
name = "wheretopark-caman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
axum = { version = "0.6.20", features = ["form"] }
bytes = "1.5.0"
dashmap = "5.5.3"
directories = "5.0.1"
ffmpeg-next = "6.0.0"
futures = "0.3.28"
image = "0.24.7"
imageproc = "0.23.0"
indexmap = "2.0.2"
itertools = "0.11.0"
lazy_static = "1.4.0"
m3u8-rs = "5.0.4"
ndarray = "0.15.6"
nshare = { version = "0.9.0", features = ["ndarray", "image"] }
num = "0.4.1"
ort = { version = "1.15.4", features = ["coreml"] }
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = { version = "2.4.1", features = ["serde"] }
