[package]
name = "wheretopark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
geohash = "0.12.0"
iso_currency = { version = "0.4.3", features = ["with-serde"] }
rust_decimal = { version = "1.25.0", features = ["serde-with-float"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.9.13"
strum = { version = "0.24.1", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }

miette = { version = "5.3.0", optional = true }
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"], default-features = false, optional = true }

async-trait = { version = "0.1.56", optional = true }
tokio = { version = "1.20.1", features = ["full"], optional = true }
tracing = { version = "0.1.35", optional = true }
tokio-graceful-shutdown = { version = "0.11.1", optional = true }
arc-swap = { version = "1.5.1", optional = true }

[features]
authorization = ["miette", "reqwest"]
storekeeper = ["miette", "reqwest"]
provider = ["arc-swap", "authorization", "storekeeper", "async-trait", "tokio", "tracing", "tokio-graceful-shutdown"]
