[package]
name = "wheretopark-provider-cctv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wheretopark = { path = "../../rust", features = ["provider"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde_yaml = "0.9.4"
futures = "0.3.21"
async-trait = "0.1.56"
url = "2.2.2"
tokio-graceful-shutdown = "0.11.1"
image = "0.24.3"
miette = { version = "5.3.0", features = ["fancy"] }
tract-onnx = "0.17.4"
xdg = "2.4.1"
clap = { version = "3.2.17", features = ["derive"] }
opencv = "0.66.0"
thiserror = "1.0.32"
geo = "0.23.0"
imageproc = "0.23.0"
chrono = "0.4.21"
mat2image = "0.1.1"
cv-convert = { version = "0.20.0", features = ["image_0-24", "opencv_0-66"] }
rusttype = "0.9.2"
